[gd_scene load_steps=19 format=4 uid="uid://drgrjwt83imw6"]

[ext_resource type="Script" uid="uid://brykwwcltno21" path="res://Components/Mechanics/Summer/Water/water.gd" id="1_y2uts"]
[ext_resource type="Texture2D" uid="uid://bq853ey8admm0" path="res://Assets/Environments/floor-normal.png" id="2_4dn8y"]
[ext_resource type="Texture2D" uid="uid://deqikhm5vffso" path="res://Components/Mechanics/Summer/Water/Textures/water-light.tres" id="3_ma6sa"]
[ext_resource type="Texture2D" uid="uid://bdwufuit7l4f6" path="res://Assets/Environments/floor-spring.png" id="3_nu2gm"]
[ext_resource type="Texture2D" uid="uid://cxkb2aidghp1" path="res://Assets/Environments/floor-winter.png" id="4_nejyc"]
[ext_resource type="Texture2D" uid="uid://bxnkyxi1a4pdy" path="res://Assets/Environments/wall-sprites-4-corners-expanded.png" id="5_ecrab"]
[ext_resource type="Texture2D" uid="uid://dnordf0fj6ukw" path="res://Assets/Environments/walls-spring-expanded.png" id="6_peega"]
[ext_resource type="Texture2D" uid="uid://hci1s7h7ibqt" path="res://Assets/Environments/walls-winter.png" id="7_rtq27"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_ou5ig"]
texture = ExtResource("2_4dn8y")
texture_region_size = Vector2i(32, 32)
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0
4:0/0 = 0
0:1/0 = 0
1:1/0 = 0
2:1/0 = 0
3:1/0 = 0
4:1/0 = 0
0:2/0 = 0
1:2/0 = 0
2:2/0 = 0
3:2/0 = 0
4:2/0 = 0
0:3/0 = 0
1:3/0 = 0
2:3/0 = 0
3:3/0 = 0
4:3/0 = 0
0:4/0 = 0
1:4/0 = 0
2:4/0 = 0
3:4/0 = 0
4:4/0 = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_26a17"]
texture = ExtResource("3_nu2gm")
texture_region_size = Vector2i(32, 32)
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0
4:0/0 = 0
0:1/0 = 0
1:1/0 = 0
2:1/0 = 0
3:1/0 = 0
4:1/0 = 0
0:2/0 = 0
1:2/0 = 0
2:2/0 = 0
3:2/0 = 0
4:2/0 = 0
0:3/0 = 0
1:3/0 = 0
2:3/0 = 0
3:3/0 = 0
4:3/0 = 0
0:4/0 = 0
1:4/0 = 0
2:4/0 = 0
3:4/0 = 0
4:4/0 = 0
5:0/0 = 0
6:0/0 = 0
7:0/0 = 0
7:1/0 = 0
7:2/0 = 0
6:2/0 = 0
5:2/0 = 0
5:1/0 = 0
6:1/0 = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_ovv1n"]
texture = ExtResource("4_nejyc")
texture_region_size = Vector2i(32, 32)
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0
4:0/0 = 0
0:1/0 = 0
1:1/0 = 0
2:1/0 = 0
3:1/0 = 0
4:1/0 = 0
0:2/0 = 0
1:2/0 = 0
2:2/0 = 0
3:2/0 = 0
4:2/0 = 0
0:3/0 = 0
1:3/0 = 0
2:3/0 = 0
3:3/0 = 0
4:3/0 = 0
0:4/0 = 0
1:4/0 = 0
2:4/0 = 0
3:4/0 = 0
4:4/0 = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_gob0a"]
texture = ExtResource("5_ecrab")
texture_region_size = Vector2i(32, 32)
0:0/0 = 0
0:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
1:0/0 = 0
1:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
2:0/0 = 0
2:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
3:0/0 = 0
3:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
4:0/0 = 0
4:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
0:1/0 = 0
0:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
1:1/0 = 0
2:1/0 = 0
2:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
3:1/0 = 0
4:1/0 = 0
4:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
0:2/0 = 0
0:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
1:2/0 = 0
1:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
4:2/0 = 0
4:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
0:3/0 = 0
0:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
1:3/0 = 0
4:3/0 = 0
4:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
0:4/0 = 0
0:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
1:4/0 = 0
1:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
2:4/0 = 0
2:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
3:4/0 = 0
3:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
4:4/0 = 0
4:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
2:2/0 = 0
2:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
3:3/0 = 0
2:3/0 = 0
2:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
3:2/0 = 0
3:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
5:0/0 = 0
6:0/0 = 0
7:0/0 = 0
5:1/0 = 0
6:1/0 = 0
7:1/0 = 0
5:2/0 = 0
6:2/0 = 0
7:2/0 = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_j6g6k"]
texture = ExtResource("6_peega")
texture_region_size = Vector2i(32, 32)
0:0/0 = 0
0:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
1:0/0 = 0
1:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
2:0/0 = 0
2:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
3:0/0 = 0
3:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
4:0/0 = 0
4:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
0:1/0 = 0
0:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
1:1/0 = 0
2:1/0 = 0
2:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
3:1/0 = 0
4:1/0 = 0
4:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
0:2/0 = 0
0:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
1:2/0 = 0
1:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
4:2/0 = 0
4:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
0:3/0 = 0
0:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
1:3/0 = 0
4:3/0 = 0
4:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
0:4/0 = 0
0:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
1:4/0 = 0
1:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
2:4/0 = 0
2:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
3:4/0 = 0
3:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
4:4/0 = 0
4:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
2:2/0 = 0
2:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
2:3/0 = 0
2:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
3:2/0 = 0
3:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
3:3/0 = 0
5:0/0 = 0
6:0/0 = 0
7:0/0 = 0
5:1/0 = 0
6:1/0 = 0
7:1/0 = 0
5:2/0 = 0
6:2/0 = 0
7:2/0 = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_5ghph"]
texture = ExtResource("7_rtq27")
texture_region_size = Vector2i(32, 32)
0:0/0 = 0
0:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
1:0/0 = 0
1:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
2:0/0 = 0
2:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
3:0/0 = 0
3:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
4:0/0 = 0
4:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
0:1/0 = 0
0:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
1:1/0 = 0
2:1/0 = 0
2:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
3:1/0 = 0
4:1/0 = 0
4:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
0:2/0 = 0
0:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
1:2/0 = 0
1:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
4:2/0 = 0
4:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
0:3/0 = 0
0:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
1:3/0 = 0
4:3/0 = 0
4:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
0:4/0 = 0
0:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
1:4/0 = 0
1:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
2:4/0 = 0
2:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
3:4/0 = 0
3:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
4:4/0 = 0
4:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
2:2/0 = 0
2:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
2:3/0 = 0
2:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
3:2/0 = 0
3:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
3:3/0 = 0

[sub_resource type="TileSet" id="TileSet_repyq"]
tile_size = Vector2i(32, 32)
physics_layer_0/collision_layer = 1
physics_layer_0/collision_mask = 2
sources/0 = SubResource("TileSetAtlasSource_ou5ig")
sources/1 = SubResource("TileSetAtlasSource_26a17")
sources/2 = SubResource("TileSetAtlasSource_ovv1n")
sources/3 = SubResource("TileSetAtlasSource_gob0a")
sources/4 = SubResource("TileSetAtlasSource_j6g6k")
sources/5 = SubResource("TileSetAtlasSource_5ghph")

[sub_resource type="Gradient" id="Gradient_o0pje"]
interpolation_mode = 1
offsets = PackedFloat32Array(0, 0.7178571)
colors = PackedColorArray(0.6664, 0.98, 0.95909333, 0, 5.7756904e-07, 0.39136794, 0.4331271, 1)

[sub_resource type="FastNoiseLite" id="FastNoiseLite_y2uts"]
noise_type = 2
frequency = 0.0473
fractal_type = 0
fractal_weighted_strength = 0.25
cellular_distance_function = 3
cellular_return_type = 6

[sub_resource type="NoiseTexture2D" id="NoiseTexture2D_4weuw"]
width = 704
height = 704
noise = SubResource("FastNoiseLite_y2uts")
color_ramp = SubResource("Gradient_o0pje")
seamless = true

[node name="Water" type="Node2D"]
modulate = Color(1.3167266, 1.3167266, 1.3167266, 0.29803923)
z_index = -1
z_as_relative = false
script = ExtResource("1_y2uts")

[node name="floor" type="TileMapLayer" parent="."]
modulate = Color(1.586667, 1.586667, 1.586667, 1)
scale = Vector2(2, 2)
tile_map_data = PackedByteArray("AAAAAAAAAQAAAAAAAAAAAAEAAQAAAAEAAAAAAAIAAQAAAAIAAAAAAAMAAQAAAAMAAAAAAAQAAQAAAAQAAAABAAAAAQABAAAAAAABAAEAAQABAAEAAAABAAIAAQABAAIAAAABAAMAAQABAAMAAAABAAQAAQABAAQAAAACAAAAAQACAAAAAAACAAEAAQACAAEAAAACAAIAAQACAAIAAAACAAMAAQACAAMAAAACAAQAAQACAAQAAAADAAAAAQADAAAAAAADAAEAAQADAAEAAAADAAIAAQADAAIAAAADAAMAAQADAAMAAAADAAQAAQADAAQAAAAEAAAAAQAEAAAAAAAEAAEAAQAEAAEAAAAEAAIAAQAEAAIAAAAEAAMAAQAEAAMAAAAEAAQAAQAEAAQAAAAFAAAAAQAAAAAAAAAFAAEAAQAAAAEAAAAFAAIAAQAAAAIAAAAFAAMAAQAAAAMAAAAFAAQAAQAAAAQAAAAGAAAAAQABAAAAAAAGAAEAAQABAAEAAAAGAAIAAQABAAIAAAAGAAMAAQABAAMAAAAGAAQAAQABAAQAAAAHAAAAAQACAAAAAAAHAAEAAQACAAEAAAAHAAIAAQACAAIAAAAHAAMAAQACAAMAAAAHAAQAAQACAAQAAAAIAAAAAQADAAAAAAAIAAEAAQADAAEAAAAIAAIAAQADAAIAAAAIAAMAAQADAAMAAAAIAAQAAQADAAQAAAAJAAAAAQAEAAAAAAAJAAEAAQAEAAEAAAAJAAIAAQAEAAIAAAAJAAMAAQAEAAMAAAAJAAQAAQAEAAQAAAAAAAUAAQAAAAAAAAAAAAYAAQAAAAEAAAAAAAcAAQAAAAIAAAAAAAgAAQAAAAMAAAAAAAkAAQAAAAQAAAABAAUAAQABAAAAAAABAAYAAQABAAEAAAABAAcAAQABAAIAAAABAAgAAQABAAMAAAABAAkAAQABAAQAAAACAAUAAQACAAAAAAACAAcAAQACAAIAAAACAAgAAQACAAMAAAACAAkAAQACAAQAAAADAAUAAQADAAAAAAADAAgAAQADAAMAAAADAAkAAQADAAQAAAAEAAUAAQAEAAAAAAAEAAgAAQAEAAMAAAAEAAkAAQAEAAQAAAAFAAUAAQAAAAAAAAAFAAYAAQAAAAEAAAAFAAcAAQAAAAIAAAAFAAgAAQAAAAMAAAAFAAkAAQAAAAQAAAAGAAUAAQABAAAAAAAGAAYAAQABAAEAAAAGAAcAAQABAAIAAAAGAAgAAQABAAMAAAAGAAkAAQABAAQAAAAHAAUAAQACAAAAAAAHAAYAAQACAAEAAAAHAAcAAQACAAIAAAAHAAgAAQACAAMAAAAHAAkAAQACAAQAAAAIAAUAAQADAAAAAAAIAAYAAQADAAEAAAAIAAcAAQADAAIAAAAIAAgAAQADAAMAAAAIAAkAAQADAAQAAAAJAAUAAQAEAAAAAAAJAAYAAQAEAAEAAAAJAAcAAQAEAAIAAAAJAAgAAQAEAAMAAAAJAAkAAQAEAAQAAAAAAAoAAQAAAAAAAAABAAoAAQABAAAAAAACAAoAAQACAAAAAAADAAoAAQADAAAAAAAEAAoAAQAEAAAAAAAFAAoAAQAAAAAAAAAGAAoAAQABAAAAAAAHAAoAAQACAAAAAAAIAAoAAQADAAAAAAAJAAoAAQAEAAAAAAAKAAoAAQAAAAAAAAAKAAAAAQAAAAAAAAAKAAEAAQAAAAEAAAAKAAIAAQAAAAIAAAAKAAMAAQAAAAMAAAAKAAQAAQAAAAQAAAAKAAUAAQAAAAAAAAAKAAYAAQAAAAEAAAAKAAcAAQAAAAIAAAAKAAgAAQAAAAMAAAAKAAkAAQAAAAQAAAACAAYAAQACAAEAAAALAAAAAQABAAAAAAALAAEAAQABAAEAAAALAAIAAQABAAIAAAALAAMAAQABAAMAAAALAAQAAQABAAQAAAAMAAAAAQACAAAAAAAMAAEAAQACAAEAAAAMAAIAAQACAAIAAAAMAAMAAQACAAMAAAAMAAQAAQACAAQAAAANAAAAAQADAAAAAAANAAEAAQADAAEAAAANAAIAAQADAAIAAAANAAMAAQADAAMAAAANAAQAAQADAAQAAAAOAAAAAQAEAAAAAAAOAAEAAQAEAAEAAAAOAAIAAQAEAAIAAAAOAAMAAQAEAAMAAAAOAAQAAQAEAAQAAAAPAAAAAQAAAAAAAAAPAAEAAQAAAAEAAAAPAAIAAQAAAAIAAAAPAAMAAQAAAAMAAAAPAAQAAQAAAAQAAAAQAAAAAQABAAAAAAAQAAEAAQABAAEAAAAQAAIAAQABAAIAAAAQAAMAAQABAAMAAAAQAAQAAQABAAQAAAARAAAAAQACAAAAAAARAAEAAQACAAEAAAARAAIAAQACAAIAAAARAAMAAQACAAMAAAARAAQAAQACAAQAAAASAAAAAQADAAAAAAASAAEAAQADAAEAAAASAAIAAQADAAIAAAASAAMAAQADAAMAAAASAAQAAQADAAQAAAATAAAAAQAEAAAAAAATAAEAAQAEAAEAAAATAAIAAQAEAAIAAAATAAMAAQAEAAMAAAATAAQAAQAEAAQAAAAUAAAAAQAAAAAAAAAUAAEAAQAAAAEAAAAUAAIAAQAAAAIAAAAUAAMAAQAAAAMAAAAUAAQAAQAAAAQAAAAVAAAAAQABAAAAAAAVAAEAAQABAAEAAAAVAAIAAQABAAIAAAAVAAMAAQABAAMAAAAVAAQAAQABAAQAAAAWAAAAAQACAAAAAAAWAAEAAQACAAEAAAAWAAIAAQACAAIAAAAWAAMAAQACAAMAAAAWAAQAAQACAAQAAAAXAAAAAQADAAAAAAAXAAEAAQADAAEAAAAXAAIAAQADAAIAAAAXAAMAAQADAAMAAAAXAAQAAQADAAQAAAAYAAAAAQAEAAAAAAAYAAEAAQAEAAEAAAAYAAIAAQAEAAIAAAAYAAMAAQAEAAMAAAAYAAQAAQAEAAQAAAADAAYAAQADAAEAAAADAAcAAQADAAIAAAAEAAYAAQAEAAEAAAAEAAcAAQAEAAIAAAALAAUAAQABAAAAAAALAAYAAQABAAEAAAALAAcAAQABAAIAAAALAAgAAQABAAMAAAALAAkAAQABAAQAAAAMAAUAAQACAAAAAAAMAAYAAQACAAEAAAAMAAcAAQACAAIAAAAMAAgAAQACAAMAAAAMAAkAAQACAAQAAAANAAUAAQADAAAAAAANAAYAAQADAAEAAAANAAcAAQADAAIAAAANAAgAAQADAAMAAAANAAkAAQADAAQAAAAOAAUAAQAEAAAAAAAOAAYAAQAEAAEAAAAOAAcAAQAEAAIAAAAOAAgAAQAEAAMAAAAOAAkAAQAEAAQAAAAUAAUAAQAAAAAAAAAUAAYAAQAAAAEAAAAUAAcAAQAAAAIAAAAUAAgAAQAAAAMAAAAUAAkAAQAAAAQAAAAVAAUAAQABAAAAAAAVAAYAAQABAAEAAAAVAAcAAQABAAIAAAAVAAgAAQABAAMAAAAVAAkAAQABAAQAAAAWAAUAAQACAAAAAAAWAAYAAQACAAEAAAAWAAcAAQACAAIAAAAWAAgAAQACAAMAAAAWAAkAAQACAAQAAAAXAAUAAQADAAAAAAAXAAYAAQADAAEAAAAXAAcAAQADAAIAAAAXAAgAAQADAAMAAAAXAAkAAQADAAQAAAAYAAUAAQAEAAAAAAAYAAYAAQAEAAEAAAAYAAcAAQAEAAIAAAAYAAgAAQAEAAMAAAAYAAkAAQAEAAQAAAAPAAUAAQAAAAAAAAAPAAYAAQAAAAEAAAAPAAcAAQAAAAIAAAAPAAgAAQAAAAMAAAAPAAkAAQAAAAQAAAAQAAUAAQABAAAAAAAQAAYAAQABAAEAAAAQAAcAAQABAAIAAAAQAAgAAQABAAMAAAAQAAkAAQABAAQAAAARAAUAAQACAAAAAAARAAYAAQACAAEAAAARAAcAAQACAAIAAAARAAgAAQACAAMAAAARAAkAAQACAAQAAAASAAUAAQADAAAAAAASAAYAAQADAAEAAAASAAcAAQADAAIAAAASAAgAAQADAAMAAAASAAkAAQADAAQAAAATAAUAAQAEAAAAAAATAAYAAQAEAAEAAAATAAcAAQAEAAIAAAATAAgAAQAEAAMAAAATAAkAAQAEAAQAAAAAAAsAAQAAAAEAAAAAAAwAAQAAAAIAAAAAAA0AAQAAAAMAAAAAAA4AAQAAAAQAAAABAAsAAQABAAEAAAABAAwAAQABAAIAAAABAA0AAQABAAMAAAABAA4AAQABAAQAAAACAAsAAQACAAEAAAACAAwAAQACAAIAAAACAA0AAQACAAMAAAACAA4AAQACAAQAAAADAAsAAQADAAEAAAADAAwAAQADAAIAAAADAA0AAQADAAMAAAADAA4AAQADAAQAAAAEAAsAAQAEAAEAAAAEAAwAAQAEAAIAAAAEAA0AAQAEAAMAAAAEAA4AAQAEAAQAAAAFAAsAAQAAAAEAAAAFAAwAAQAAAAIAAAAFAA0AAQAAAAMAAAAFAA4AAQAAAAQAAAAGAAsAAQABAAEAAAAGAAwAAQABAAIAAAAGAA0AAQABAAMAAAAGAA4AAQABAAQAAAAHAAsAAQACAAEAAAAHAAwAAQACAAIAAAAHAA0AAQACAAMAAAAHAA4AAQACAAQAAAAIAAsAAQADAAEAAAAIAAwAAQADAAIAAAAIAA0AAQADAAMAAAAIAA4AAQADAAQAAAAJAAsAAQAEAAEAAAAJAAwAAQAEAAIAAAAJAA0AAQAEAAMAAAAJAA4AAQAEAAQAAAAKAAsAAQAAAAEAAAAKAAwAAQAAAAIAAAAKAA0AAQAAAAMAAAAKAA4AAQAAAAQAAAALAAoAAQABAAAAAAALAAsAAQABAAEAAAALAAwAAQABAAIAAAALAA0AAQABAAMAAAALAA4AAQABAAQAAAAMAAoAAQACAAAAAAAMAAsAAQACAAEAAAAMAAwAAQACAAIAAAAMAA0AAQACAAMAAAAMAA4AAQACAAQAAAANAAoAAQADAAAAAAANAAsAAQADAAEAAAANAAwAAQADAAIAAAANAA0AAQADAAMAAAANAA4AAQADAAQAAAAOAAoAAQAEAAAAAAAOAAsAAQAEAAEAAAAOAAwAAQAEAAIAAAAOAA0AAQAEAAMAAAAOAA4AAQAEAAQAAAAPAAoAAQAAAAAAAAAPAAsAAQAAAAEAAAAPAAwAAQAAAAIAAAAPAA0AAQAAAAMAAAAPAA4AAQAAAAQAAAAQAAoAAQABAAAAAAAQAAsAAQABAAEAAAAQAAwAAQABAAIAAAAQAA0AAQABAAMAAAAQAA4AAQABAAQAAAARAAoAAQACAAAAAAARAAsAAQACAAEAAAARAAwAAQACAAIAAAARAA0AAQACAAMAAAARAA4AAQACAAQAAAASAAoAAQADAAAAAAASAAsAAQADAAEAAAASAAwAAQADAAIAAAASAA0AAQADAAMAAAASAA4AAQADAAQAAAATAAoAAQAEAAAAAAATAAsAAQAEAAEAAAATAAwAAQAEAAIAAAATAA0AAQAEAAMAAAATAA4AAQAEAAQAAAAUAAoAAQAAAAAAAAAUAAsAAQAAAAEAAAAUAAwAAQAAAAIAAAAUAA0AAQAAAAMAAAAUAA4AAQAAAAQAAAAVAAoAAQABAAAAAAAVAAsAAQABAAEAAAAVAAwAAQABAAIAAAAVAA0AAQABAAMAAAAVAA4AAQABAAQAAAAWAAoAAQACAAAAAAAWAAsAAQACAAEAAAAWAAwAAQACAAIAAAAWAA0AAQACAAMAAAAWAA4AAQACAAQAAAAXAAoAAQADAAAAAAAXAAsAAQADAAEAAAAXAAwAAQADAAIAAAAXAA0AAQADAAMAAAAXAA4AAQADAAQAAAAYAAoAAQAEAAAAAAAYAAsAAQAEAAEAAAAYAAwAAQAEAAIAAAAYAA0AAQAEAAMAAAAYAA4AAQAEAAQAAAAAAPv/AQAAAAAAAAAAAPz/AQAAAAEAAAAAAP3/AQAAAAIAAAAAAP7/AQAAAAMAAAAAAP//AQAAAAQAAAABAPv/AQABAAAAAAABAPz/AQABAAEAAAABAP3/AQABAAIAAAABAP7/AQABAAMAAAABAP//AQABAAQAAAACAPv/AQACAAAAAAACAPz/AQACAAEAAAACAP3/AQACAAIAAAACAP7/AQACAAMAAAACAP//AQACAAQAAAADAPv/AQADAAAAAAADAPz/AQADAAEAAAADAP3/AQADAAIAAAADAP7/AQADAAMAAAADAP//AQADAAQAAAAEAPv/AQAEAAAAAAAEAPz/AQAEAAEAAAAEAP3/AQAEAAIAAAAEAP7/AQAEAAMAAAAEAP//AQAEAAQAAAAFAPv/AQAAAAAAAAAFAPz/AQAAAAEAAAAFAP3/AQAAAAIAAAAFAP7/AQAAAAMAAAAFAP//AQAAAAQAAAAGAPv/AQABAAAAAAAGAPz/AQABAAEAAAAGAP3/AQABAAIAAAAGAP7/AQABAAMAAAAGAP//AQABAAQAAAAHAPv/AQACAAAAAAAHAPz/AQACAAEAAAAHAP3/AQACAAIAAAAHAP7/AQACAAMAAAAHAP//AQACAAQAAAAIAPv/AQADAAAAAAAIAPz/AQADAAEAAAAIAP3/AQADAAIAAAAIAP7/AQADAAMAAAAIAP//AQADAAQAAAAJAPv/AQAEAAAAAAAJAPz/AQAEAAEAAAAJAP3/AQAEAAIAAAAJAP7/AQAEAAMAAAAJAP//AQAEAAQAAAAKAPv/AQAAAAAAAAAKAPz/AQAAAAEAAAAKAP3/AQAAAAIAAAAKAP7/AQAAAAMAAAAKAP//AQAAAAQAAAALAPv/AQABAAAAAAALAPz/AQABAAEAAAALAP3/AQABAAIAAAALAP7/AQABAAMAAAALAP//AQABAAQAAAAMAPv/AQACAAAAAAAMAPz/AQACAAEAAAAMAP3/AQACAAIAAAAMAP7/AQACAAMAAAAMAP//AQACAAQAAAANAPv/AQADAAAAAAANAPz/AQADAAEAAAANAP3/AQADAAIAAAANAP7/AQADAAMAAAANAP//AQADAAQAAAAOAPv/AQAEAAAAAAAOAPz/AQAEAAEAAAAOAP3/AQAEAAIAAAAOAP7/AQAEAAMAAAAOAP//AQAEAAQAAAAPAPv/AQAAAAAAAAAPAPz/AQAAAAEAAAAPAP3/AQAAAAIAAAAPAP7/AQAAAAMAAAAPAP//AQAAAAQAAAAQAPv/AQABAAAAAAAQAPz/AQABAAEAAAAQAP3/AQABAAIAAAAQAP7/AQABAAMAAAAQAP//AQABAAQAAAARAPv/AQACAAAAAAARAPz/AQACAAEAAAARAP3/AQACAAIAAAARAP7/AQACAAMAAAARAP//AQACAAQAAAASAPv/AQADAAAAAAASAPz/AQADAAEAAAASAP3/AQADAAIAAAASAP7/AQADAAMAAAASAP//AQADAAQAAAATAPv/AQAEAAAAAAATAPz/AQAEAAEAAAATAP3/AQAEAAIAAAATAP7/AQAEAAMAAAATAP//AQAEAAQAAAAUAPv/AQAAAAAAAAAUAPz/AQAAAAEAAAAUAP3/AQAAAAIAAAAUAP7/AQAAAAMAAAAUAP//AQAAAAQAAAAVAPv/AQABAAAAAAAVAPz/AQABAAEAAAAVAP3/AQABAAIAAAAVAP7/AQABAAMAAAAVAP//AQABAAQAAAAWAPv/AQACAAAAAAAWAPz/AQACAAEAAAAWAP3/AQACAAIAAAAWAP7/AQACAAMAAAAWAP//AQACAAQAAAAXAPv/AQADAAAAAAAXAPz/AQADAAEAAAAXAP3/AQADAAIAAAAXAP7/AQADAAMAAAAXAP//AQADAAQAAAAYAPv/AQAEAAAAAAAYAPz/AQAEAAEAAAAYAP3/AQAEAAIAAAAYAP7/AQAEAAMAAAAYAP//AQAEAAQAAAAAAPX/AQAAAAQAAAAAAPb/AQAAAAAAAAAAAPf/AQAAAAEAAAAAAPj/AQAAAAIAAAAAAPn/AQAAAAMAAAABAPX/AQABAAQAAAABAPb/AQABAAAAAAABAPf/AQABAAEAAAABAPj/AQABAAIAAAABAPn/AQABAAMAAAACAPX/AQACAAQAAAACAPb/AQACAAAAAAACAPf/AQACAAEAAAACAPj/AQACAAIAAAACAPn/AQACAAMAAAADAPX/AQADAAQAAAADAPb/AQADAAAAAAADAPf/AQADAAEAAAADAPj/AQADAAIAAAADAPn/AQADAAMAAAAEAPX/AQAEAAQAAAAEAPb/AQAEAAAAAAAEAPf/AQAEAAEAAAAEAPj/AQAEAAIAAAAEAPn/AQAEAAMAAAAAAPr/AQAAAAQAAAABAPr/AQABAAQAAAACAPr/AQACAAQAAAADAPr/AQADAAQAAAAEAPr/AQAEAAQAAAAFAPb/AQAAAAAAAAAFAPf/AQAAAAEAAAAFAPj/AQAAAAIAAAAFAPn/AQAAAAMAAAAFAPr/AQAAAAQAAAAGAPb/AQABAAAAAAAGAPf/AQABAAEAAAAGAPj/AQABAAIAAAAGAPn/AQABAAMAAAAGAPr/AQABAAQAAAAHAPb/AQACAAAAAAAHAPf/AQACAAEAAAAHAPj/AQACAAIAAAAHAPn/AQACAAMAAAAHAPr/AQACAAQAAAAIAPb/AQADAAAAAAAIAPf/AQADAAEAAAAIAPj/AQADAAIAAAAIAPn/AQADAAMAAAAIAPr/AQADAAQAAAAJAPb/AQAEAAAAAAAJAPf/AQAEAAEAAAAJAPj/AQAEAAIAAAAJAPn/AQAEAAMAAAAJAPr/AQAEAAQAAAAKAPb/AQAAAAAAAAAKAPf/AQAAAAEAAAAKAPj/AQAAAAIAAAAKAPn/AQAAAAMAAAAKAPr/AQAAAAQAAAALAPb/AQABAAAAAAALAPf/AQABAAEAAAALAPj/AQABAAIAAAALAPn/AQABAAMAAAALAPr/AQABAAQAAAAMAPb/AQACAAAAAAAMAPf/AQACAAEAAAAMAPj/AQACAAIAAAAMAPn/AQACAAMAAAAMAPr/AQACAAQAAAANAPb/AQADAAAAAAANAPf/AQADAAEAAAANAPj/AQADAAIAAAANAPn/AQADAAMAAAANAPr/AQADAAQAAAAOAPb/AQAEAAAAAAAOAPf/AQAEAAEAAAAOAPj/AQAEAAIAAAAOAPn/AQAEAAMAAAAOAPr/AQAEAAQAAAAPAPb/AQAAAAAAAAAPAPf/AQAAAAEAAAAPAPj/AQAAAAIAAAAPAPn/AQAAAAMAAAAPAPr/AQAAAAQAAAAQAPb/AQABAAAAAAAQAPf/AQABAAEAAAAQAPj/AQABAAIAAAAQAPn/AQABAAMAAAAQAPr/AQABAAQAAAARAPb/AQACAAAAAAARAPf/AQACAAEAAAARAPj/AQACAAIAAAARAPn/AQACAAMAAAARAPr/AQACAAQAAAASAPb/AQADAAAAAAASAPf/AQADAAEAAAASAPj/AQADAAIAAAASAPn/AQADAAMAAAASAPr/AQADAAQAAAATAPb/AQAEAAAAAAATAPf/AQAEAAEAAAATAPj/AQAEAAIAAAATAPn/AQAEAAMAAAATAPr/AQAEAAQAAAAUAPb/AQAAAAAAAAAUAPf/AQAAAAEAAAAUAPj/AQAAAAIAAAAUAPn/AQAAAAMAAAAUAPr/AQAAAAQAAAAVAPb/AQABAAAAAAAVAPf/AQABAAEAAAAVAPj/AQABAAIAAAAVAPn/AQABAAMAAAAVAPr/AQABAAQAAAAWAPb/AQACAAAAAAAWAPf/AQACAAEAAAAWAPj/AQACAAIAAAAWAPn/AQACAAMAAAAWAPr/AQACAAQAAAAXAPb/AQADAAAAAAAXAPf/AQADAAEAAAAXAPj/AQADAAIAAAAXAPn/AQADAAMAAAAXAPr/AQADAAQAAAAYAPb/AQAEAAAAAAAYAPf/AQAEAAEAAAAYAPj/AQAEAAIAAAAYAPn/AQAEAAMAAAAYAPr/AQAEAAQAAAAUAPH/AQAAAAAAAAAUAPL/AQAAAAEAAAAUAPP/AQAAAAIAAAAUAPT/AQAAAAMAAAAUAPX/AQAAAAQAAAAVAPH/AQABAAAAAAAVAPL/AQABAAEAAAAVAPP/AQABAAIAAAAVAPT/AQABAAMAAAAVAPX/AQABAAQAAAAWAPH/AQACAAAAAAAWAPL/AQACAAEAAAAWAPP/AQACAAIAAAAWAPT/AQACAAMAAAAWAPX/AQACAAQAAAAXAPH/AQADAAAAAAAXAPL/AQADAAEAAAAXAPP/AQADAAIAAAAXAPT/AQADAAMAAAAXAPX/AQADAAQAAAAYAPH/AQAEAAAAAAAYAPL/AQAEAAEAAAAYAPP/AQAEAAIAAAAYAPT/AQAEAAMAAAAYAPX/AQAEAAQAAAAPAPH/AQAAAAAAAAAPAPL/AQAAAAEAAAAPAPP/AQAAAAIAAAAPAPT/AQAAAAMAAAAPAPX/AQAAAAQAAAAQAPH/AQABAAAAAAAQAPL/AQABAAEAAAAQAPP/AQABAAIAAAAQAPT/AQABAAMAAAAQAPX/AQABAAQAAAARAPH/AQACAAAAAAARAPL/AQACAAEAAAARAPP/AQACAAIAAAARAPT/AQACAAMAAAARAPX/AQACAAQAAAASAPH/AQADAAAAAAASAPL/AQADAAEAAAASAPP/AQADAAIAAAASAPT/AQADAAMAAAASAPX/AQADAAQAAAATAPH/AQAEAAAAAAATAPL/AQAEAAEAAAATAPP/AQAEAAIAAAATAPT/AQAEAAMAAAATAPX/AQAEAAQAAAAKAPH/AQAAAAAAAAAKAPL/AQAAAAEAAAAKAPP/AQAAAAIAAAAKAPT/AQAAAAMAAAAKAPX/AQAAAAQAAAALAPH/AQABAAAAAAALAPL/AQABAAEAAAALAPP/AQABAAIAAAALAPT/AQABAAMAAAALAPX/AQABAAQAAAAMAPH/AQACAAAAAAAMAPL/AQACAAEAAAAMAPP/AQACAAIAAAAMAPT/AQACAAMAAAAMAPX/AQACAAQAAAANAPH/AQADAAAAAAANAPL/AQADAAEAAAANAPP/AQADAAIAAAANAPT/AQADAAMAAAANAPX/AQADAAQAAAAOAPH/AQAEAAAAAAAOAPL/AQAEAAEAAAAOAPP/AQAEAAIAAAAOAPT/AQAEAAMAAAAOAPX/AQAEAAQAAAAFAPH/AQAAAAAAAAAFAPL/AQAAAAEAAAAFAPP/AQAAAAIAAAAFAPT/AQAAAAMAAAAFAPX/AQAAAAQAAAAGAPH/AQABAAAAAAAGAPL/AQABAAEAAAAGAPP/AQABAAIAAAAGAPT/AQABAAMAAAAGAPX/AQABAAQAAAAHAPH/AQACAAAAAAAHAPL/AQACAAEAAAAHAPP/AQACAAIAAAAHAPT/AQACAAMAAAAHAPX/AQACAAQAAAAIAPH/AQADAAAAAAAIAPL/AQADAAEAAAAIAPP/AQADAAIAAAAIAPT/AQADAAMAAAAIAPX/AQADAAQAAAAJAPH/AQAEAAAAAAAJAPL/AQAEAAEAAAAJAPP/AQAEAAIAAAAJAPT/AQAEAAMAAAAJAPX/AQAEAAQAAAAAAPH/AQAAAAAAAAAAAPL/AQAAAAEAAAAAAPP/AQAAAAIAAAAAAPT/AQAAAAMAAAABAPH/AQABAAAAAAABAPL/AQABAAEAAAABAPP/AQABAAIAAAABAPT/AQABAAMAAAACAPH/AQACAAAAAAACAPL/AQACAAEAAAACAPP/AQACAAIAAAACAPT/AQACAAMAAAADAPH/AQADAAAAAAADAPL/AQADAAEAAAADAPP/AQADAAIAAAADAPT/AQADAAMAAAAEAPH/AQAEAAAAAAAEAPL/AQAEAAEAAAAEAPP/AQAEAAIAAAAEAPT/AQAEAAMAAAA=")
tile_set = SubResource("TileSet_repyq")

[node name="ColorRect" type="ColorRect" parent="."]
offset_top = -704.0
offset_right = 1408.0
offset_bottom = 704.0
color = Color(0, 0.7999997, 1, 1)

[node name="WaterLight" type="Node2D" parent="."]
modulate = Color(1, 1, 1, 0.2)
position = Vector2(704, 0)

[node name="Water_light_1" type="Sprite2D" parent="WaterLight"]
modulate = Color(1.179842, 1.179842, 1.179842, 0.6862745)
position = Vector2(-352, 352)
texture = ExtResource("3_ma6sa")

[node name="Water_light_2" type="Sprite2D" parent="WaterLight"]
modulate = Color(1.179842, 1.179842, 1.179842, 0.6862745)
position = Vector2(352, 352)
texture = ExtResource("3_ma6sa")

[node name="Water_light_3" type="Sprite2D" parent="WaterLight"]
modulate = Color(1.179842, 1.179842, 1.179842, 0.6862745)
position = Vector2(-352, -352)
texture = ExtResource("3_ma6sa")

[node name="Water_light_4" type="Sprite2D" parent="WaterLight"]
modulate = Color(1.179842, 1.179842, 1.179842, 0.6862745)
position = Vector2(352, -352)
texture = ExtResource("3_ma6sa")

[node name="WaterDark" type="Node2D" parent="."]
modulate = Color(2.1074393, 2.1074393, 2.1074393, 0.5372549)
position = Vector2(704, 0)
scale = Vector2(0.9, 0.9)

[node name="Water_light_1" type="Sprite2D" parent="WaterDark"]
position = Vector2(-352, 352)
texture = SubResource("NoiseTexture2D_4weuw")

[node name="Water_light_2" type="Sprite2D" parent="WaterDark"]
position = Vector2(352, 352)
texture = SubResource("NoiseTexture2D_4weuw")

[node name="Water_light_3" type="Sprite2D" parent="WaterDark"]
position = Vector2(-352, -352)
texture = SubResource("NoiseTexture2D_4weuw")

[node name="Water_light_4" type="Sprite2D" parent="WaterDark"]
position = Vector2(352, -352)
texture = SubResource("NoiseTexture2D_4weuw")

[node name="Timer" type="Timer" parent="."]
wait_time = 2.0

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
